--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,7 +14,7 @@
 
         {% compress css %}
             
-            <link rel="stylesheet" type="text/x-scss" href="{% static 'css/opencourts.scss' %}">
+            <link rel="stylesheet" type="text/x-scss" href="{% static 'css/ohs.scss' %}">
         {% endcompress %}
 
         {% block extra_css %}
@@ -29,7 +29,7 @@
 
         {% compress js %}
             
-            <script type="text/javascript" src="{% static 'js/opencourts.js' %}"></script>
+            <script type="text/javascript" src="{% static 'js/ohs.js' %}"></script>
         {% endcompress %}
 
         {% block extra_js %}
