--- a/core/templates/core/content_page.html
+++ b/core/templates/core/content_page.html
@@ -5,19 +5,7 @@
 
 {% block content %}
 
-    {% if self.get_ancestors|length > 1 %}
-    <ol class="nav breadcrumb">
-
-    {% for page in self.get_ancestors %}
-        {% if page.is_root == False %}
-        <li><a href="{% pageurl page %}">{{ page.title }}</a></li>
-        {% endif %}
-    {% endfor %}
-
-        <li class="current">{{ self.title }}</li>
-
-    </ol>
-    {% endif %}
+    {% breadcrumbs %}
 
     <h1 class="giga">{{ self.title }}</h1>
     <p class="alpha">{{ self.subtitle }}</p>
