--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -1,1 +1,10 @@
-{{ self.body | safe }}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Blog Preview Page</title>
+  <link rel="stylesheet" type="text/css" href="">
+</head>
+<body>
+  {{ self.body | safe }}
+</body>
+</html>
