added images URL to generate previews

--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -1,8 +1,15 @@
 {% load wagtailimages_tags %}
-
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7]>      <html itemscope itemtype="http://schema.org/Article" class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en-GB"> <![endif]-->
+<!--[if IE 7]>         <html itemscope itemtype="http://schema.org/Article" class="no-js lt-ie9 lt-ie8" lang="en-GB"> <![endif]-->
+<!--[if IE 8]>         <html itemscope itemtype="http://schema.org/Article" class="no-js lt-ie9" lang="en-GB"> <![endif]-->
+<!--[if gt IE 8]><!--> <html itemscope itemtype="http://schema.org/Article" class="no-js" lang="en-GB"> <!--<![endif]-->
 <head>
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <![endif]-->
+    <script src="//use.typekit.net/ots7ejy.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <title>Blog Preview Page</title>
     <link rel="stylesheet" type="text/css" href="http://proto.100shapes.com/main.css">
 </head>
