--- a/services/templates/services/service.html
+++ b/services/templates/services/service.html
@@ -88,7 +88,7 @@
                               <p class="mb--">We're a UX &amp; Design agency that specialise in working with broadcasters and media organisations.</p>
 
                               <a href
-                                 ui-sref=""
+                                 ui-sref="#"
                                  class="btn btn-link mb">Read about us</a>
                           </div>
                       </div>
