changed intro to be a RichTextField

--- a/services/templates/services/service.html
+++ b/services/templates/services/service.html
@@ -48,7 +48,7 @@
                       </p>
 
                       <p subtitle class="fz+">
-                          {{ self.intro }}
+                          {{ self.intro | safe }}
                       </p>
 
                   </div>
